--- a/index.html
+++ b/index.html
@@ -1,160 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Norsk Flashcards</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #f8f9fa;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 20px;
-    }
-    .card {
-      width: 350px;
-      height: 200px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      text-align: center;
-      cursor: pointer;
-      transition: transform 0.5s;
-      perspective: 1000px;
-      margin-bottom: 20px;
-    }
-    .card-inner {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      border-radius: 10px;
-      background-color: #fff;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      backface-visibility: hidden;
-      transform-style: preserve-3d;
-      padding: 20px;
-    }
-    .card.flipped .card-inner {
-      transform: rotateY(180deg);
-    }
-    .card-front, .card-back {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      backface-visibility: hidden;
-    }
-    .card-back {
-      transform: rotateY(180deg);
-      background-color: #e9ecef;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Norsk Flashcards</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+body { background-color: #f8f9fa; display:flex; flex-direction:column; align-items:center; justify-content:center; min-height:100vh; padding:20px;}
+.card { width:350px; height:200px; display:flex; align-items:center; justify-content:center; font-size:20px; text-align:center; cursor:pointer; transition:transform 0.5s; perspective:1000px; margin-bottom:20px;}
+.card-inner { position:relative; width:100%; height:100%; border-radius:10px; background-color:#fff; box-shadow:0 8px 16px rgba(0,0,0,0.2); display:flex; align-items:center; justify-content:center; backface-visibility:hidden; transform-style:preserve-3d; padding:20px;}
+.card.flipped .card-inner { transform: rotateY(180deg); }
+.card-front,.card-back { position:absolute; width:100%; height:100%; display:flex; align-items:center; justify-content:center; backface-visibility:hidden; }
+.card-back { transform: rotateY(180deg); background-color:#e9ecef; }
+.progress-container { width:350px; margin-bottom:15px; }
+</style>
 </head>
 <body>
 
-  <h2 class="mb-3 text-center">🇳🇴 Norsk Flashcards</h2>
+<h2 class="mb-3 text-center">🇳🇴 Norsk Flashcards</h2>
 
-  <!-- Dropdown for selecting flashcard set -->
-  <select id="setSelector" class="form-select mb-4" style="width: 350px;">
-    <option value="flashcards-basics.yaml">Basics</option>
-    <option value="flashcards-verbs.yaml">Verbs</option>
-    <option value="flashcards-phrases.yaml">Phrases</option>
-  </select>
+<!-- Set Selector -->
+<select id="setSelector" class="form-select mb-2" style="width:350px;">
+  <option value="flashcards-basics.yaml">Basics</option>
+  <option value="flashcards-verbs.yaml">Verbs</option>
+  <option value="flashcards-phrases.yaml">Phrases</option>
+</select>
 
-  <!-- Flashcard -->
-  <div class="card" id="flashcard">
-    <div class="card-inner">
-      <div class="card-front">Loading...</div>
-      <div class="card-back"></div>
-    </div>
+<!-- Progress -->
+<div class="progress-container">
+  <div class="progress">
+    <div id="progressBar" class="progress-bar" role="progressbar" style="width:0%">0%</div>
   </div>
+</div>
 
-  <!-- Controls -->
-  <div class="d-flex gap-2">
-    <button class="btn btn-primary" id="nextBtn">Next Card</button>
-    <button class="btn btn-secondary" id="shuffleBtn">Shuffle</button>
+<!-- Flashcard -->
+<div class="card" id="flashcard">
+  <div class="card-inner">
+    <div class="card-front">Loading...</div>
+    <div class="card-back"></div>
   </div>
+</div>
 
-  <!-- JS libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
-  <script>
-    const baseURL = 'https://raw.githubusercontent.com/hclpandv/norsk-flashcard/main/';
-    const selector = document.getElementById('setSelector');
-    const card = document.getElementById('flashcard');
-    const cardFront = card.querySelector('.card-front');
-    const cardBack = card.querySelector('.card-back');
-    const nextBtn = document.getElementById('nextBtn');
-    const shuffleBtn = document.getElementById('shuffleBtn');
+<!-- Controls -->
+<div class="d-flex gap-2 mb-3">
+  <button class="btn btn-primary" id="nextBtn">Next Card</button>
+  <button class="btn btn-secondary" id="shuffleBtn">Shuffle</button>
+</div>
 
-    let flashcards = [];
-    let currentIndex = 0;
-    let showingAnswer = false;
+<!-- Known/Unknown -->
+<div class="d-flex gap-2">
+  <button class="btn btn-success" id="knownBtn">Mark Known ✅</button>
+  <button class="btn btn-danger" id="unknownBtn">Mark Unknown ❌</button>
+</div>
 
-    async function loadFlashcards(fileName) {
-      try {
-        const url = `${baseURL}${fileName}?${new Date().getTime()}`; // cache-busting
-        const response = await fetch(url);
-        const yamlText = await response.text();
-        flashcards = jsyaml.load(yamlText);
-        currentIndex = 0;
-        showCard();
-      } catch (err) {
-        console.error("Error loading flashcards:", err);
-        cardFront.textContent = "Failed to load flashcards.";
-        cardBack.textContent = "";
-      }
-    }
+<!-- JS libraries -->
+<script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
+<script>
+const baseURL = 'https://raw.githubusercontent.com/hclpandv/norsk-flashcard/main/';
+const selector = document.getElementById('setSelector');
+const card = document.getElementById('flashcard');
+const cardFront = card.querySelector('.card-front');
+const cardBack = card.querySelector('.card-back');
+const nextBtn = document.getElementById('nextBtn');
+const shuffleBtn = document.getElementById('shuffleBtn');
+const knownBtn = document.getElementById('knownBtn');
+const unknownBtn = document.getElementById('unknownBtn');
+const progressBar = document.getElementById('progressBar');
 
-    function showCard() {
-      if (!flashcards.length) return;
-      showingAnswer = false;
-      card.classList.remove('flipped');
-      const cardData = flashcards[currentIndex];
-      cardFront.textContent = cardData.question;
-      cardBack.textContent = cardData.answer;
-    }
+let flashcards = [];
+let currentIndex = 0;
+let showingAnswer = false;
+let progress = {}; // tracks known/unknown
 
-    // Flip card
-    card.addEventListener('click', () => {
-      showingAnswer = !showingAnswer;
-      card.classList.toggle('flipped');
-    });
+// Load flashcards from GitHub
+async function loadFlashcards(fileName) {
+  try {
+    const url = `${baseURL}${fileName}?${new Date().getTime()}`; // cache-busting
+    const response = await fetch(url);
+    const yamlText = await response.text();
+    flashcards = jsyaml.load(yamlText);
+    currentIndex = 0;
+    loadProgress(fileName);
+    showCard();
+  } catch (err) {
+    console.error("Error loading flashcards:", err);
+    cardFront.textContent = "Failed to load flashcards.";
+    cardBack.textContent = "";
+  }
+}
 
-    // Next button
-    nextBtn.addEventListener('click', () => {
-      if (!flashcards.length) return;
-      currentIndex = (currentIndex + 1) % flashcards.length;
-      showCard();
-    });
+// Load progress from localStorage for this set
+function loadProgress(fileName) {
+  const saved = localStorage.getItem('progress-' + fileName);
+  progress = saved ? JSON.parse(saved) : {};
+  updateProgressBar();
+}
 
-    // Shuffle button
-    shuffleBtn.addEventListener('click', () => {
-      if (!flashcards.length) return;
-      currentIndex = Math.floor(Math.random() * flashcards.length);
-      showCard();
-    });
+// Save progress to localStorage
+function saveProgress(fileName) {
+  localStorage.setItem('progress-' + fileName, JSON.stringify(progress));
+}
 
-    // Handle set selection
-    selector.addEventListener('change', () => {
-      const selectedFile = selector.value;
-      loadFlashcards(selectedFile);
-      localStorage.setItem('lastSet', selectedFile); // remember selection
-    });
+// Show current card
+function showCard() {
+  if (!flashcards.length) return;
+  showingAnswer = false;
+  card.classList.remove('flipped');
+  const cardData = flashcards[currentIndex];
+  cardFront.textContent = cardData.question;
+  cardBack.textContent = cardData.answer;
+}
 
-    // Load last used set on startup
-    const lastSet = localStorage.getItem('lastSet') || 'flashcards-basics.yaml';
-    selector.value = lastSet;
-    loadFlashcards(lastSet);
-  </script>
+// Update progress bar
+function updateProgressBar() {
+  if (!flashcards.length) return;
+  const knownCount = Object.values(progress).filter(v=>v==='known').length;
+  const percent = Math.round((knownCount/flashcards.length)*100);
+  progressBar.style.width = percent + '%';
+  progressBar.textContent = percent + '%';
+}
+
+// Event listeners
+card.addEventListener('click', () => {
+  showingAnswer = !showingAnswer;
+  card.classList.toggle('flipped');
+});
+
+nextBtn.addEventListener('click', () => {
+  currentIndex = (currentIndex + 1) % flashcards.length;
+  showCard();
+});
+
+shuffleBtn.addEventListener('click', () => {
+  currentIndex = Math.floor(Math.random() * flashcards.length);
+  showCard();
+});
+
+knownBtn.addEventListener('click', () => {
+  progress[currentIndex] = 'known';
+  saveProgress(selector.value);
+  updateProgressBar();
+  nextBtn.click();
+});
+
+unknownBtn.addEventListener('click', () => {
+  progress[currentIndex] = 'unknown';
+  saveProgress(selector.value);
+  updateProgressBar();
+  nextBtn.click();
+});
+
+// Switch sets
+selector.addEventListener('change', () => {
+  const selectedFile = selector.value;
+  loadFlashcards(selectedFile);
+  localStorage.setItem('lastSet', selectedFile); // remember selection
+});
+
+// Load last used set
+const lastSet = localStorage.getItem('lastSet') || 'flashcards-basics.yaml';
+selector.value = lastSet;
+loadFlashcards(lastSet);
+
+</script>
 </body>
 </html>
