file names sanitised

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
 
 <!-- Set Selector -->
 <select id="setSelector" class="form-select mb-2" style="width:350px;">
+  <option value="flashcards-irregular-verbs.yaml">Irregulære verb</option>
   <option value="flashcards-basics.yaml">Basics</option>
-  <option value="flashcards-verbs.yaml">Verbs</option>
   <option value="flashcards-phrases.yaml">Phrases</option>
 </select>
 
