--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
   <option value="flashcards-irregular-verbs.yaml">Irregulære verb</option>
   <option value="flashcards-basics.yaml">Basics</option>
   <option value="flashcards-phrases.yaml">Phrases</option>
+  <option value="flashcards-passive.yaml">Passive Voice</option>
 </select>
 
 <!-- Progress -->
