--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
   <option value="flashcards-basics.yaml">Basics</option>
   <option value="flashcards-phrases.yaml">Phrases</option>
   <option value="flashcards-passive.yaml">Passive Voice</option>
+  <option value="flashcards-adjectives.yaml">Adjectives</option>
 </select>
 
 <!-- Progress -->
