--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
 <!-- Set Selector -->
 <select id="setSelector" class="form-select mb-2" style="width:350px;">
   <option value="flashcards-irregular-verbs.yaml">Irregulære verb</option>
-  <option value="flashcards-basics.yaml">Basics</option>
-  <option value="flashcards-phrases.yaml">Phrases</option>
   <option value="flashcards-passive.yaml">Passive Voice</option>
   <option value="flashcards-adjectives.yaml">Adjectives</option>
+  <option value="flashcards-prepositions.yaml">Preposisjoner</option>
+  
 </select>
 
 <!-- Progress -->
@@ -168,7 +168,7 @@ selector.addEventListener('change', () => {
 });
 
 // Load last used set
-const lastSet = localStorage.getItem('lastSet') || 'flashcards-basics.yaml';
+const lastSet = localStorage.getItem('lastSet') || 'flashcards-irregular-verbs.yaml';
 selector.value = lastSet;
 loadFlashcards(lastSet);
 
