--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
 <!-- Set Selector -->
 <select id="setSelector" class="form-select mb-2" style="width:350px;">
   <option value="flashcards-irregular-verbs.yaml">Irregulære verb</option>
-  <option value="flashcards-passive.yaml">Passive Voice</option>
+  <option value="flashcards-random.yaml">Random</option>
   <option value="flashcards-adjectives.yaml">Adjectives</option>
   <option value="flashcards-prepositions.yaml">Preposisjoner</option>
   
