--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body { background-color: #f8f9fa; display:flex; flex-direction:column; align-ite
 .card-inner { position:relative; width:100%; height:100%; border-radius:10px; background-color:#fff; box-shadow:0 8px 16px rgba(0,0,0,0.2); display:flex; align-items:center; justify-content:center; backface-visibility:hidden; transform-style: preserve-3d; padding:20px;}
 .card.flipped .card-inner { transform: rotateY(180deg); }
 .card-front,.card-back { position:absolute; width:100%; height:100%; display:flex; align-items:center; justify-content:center; backface-visibility:hidden; }
-.card-back { transform: rotateY(180deg); background-color:#e9ecef; }
+.card-back { transform: rotateY(180deg); background-color:#e9ecef; font-family:'Georgia','Times New Roman',serif; font-style:italic; font-size:1.1rem; color:#2c3e50; text-align:left; }
 .progress-container { width:350px; margin-bottom:15px; }
 footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
 </style>
