--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body { background-color: #f8f9fa; display:flex; flex-direction:column; align-ite
 .card.flipped .card-inner { transform: rotateY(180deg); }
 .card-front,.card-back { position:absolute; width:100%; height:100%; display:flex; align-items:center; justify-content:center; backface-visibility:hidden; }
 .card-back { transform: rotateY(180deg); background-color:#e9ecef; font-family:'Georgia','Times New Roman',serif; font-style:italic; font-size:1.1rem; color:#2c3e50; text-align:left; }
+.card-front { font-family:'Poppins','Helvetica Neue',sans-serif; font-weight:600; font-size:1.3rem; color:#212529; letter-spacing:0.5px; text-align:center; }
 .progress-container { width:350px; margin-bottom:15px; }
 footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
 </style>
