--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Norsk Flashcards</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 <style>
 body { background-color: #f8f9fa; display:flex; flex-direction:column; align-items:center; justify-content:center; min-height:100vh; padding:20px;}
 .card { width:350px; height:200px; display:flex; align-items:center; justify-content:center; font-size:20px; text-align:center; cursor:pointer; transition:transform 0.5s; perspective:1000px; margin-bottom:20px;}
@@ -56,6 +58,7 @@ footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
 <div class="d-flex gap-2">
   <button class="btn btn-success" id="knownBtn">Mark Known ✅</button>
   <button class="btn btn-danger" id="unknownBtn">Mark Unknown ❌</button>
+  <button class="btn btn-info" id="speakBtn"><i class="bi bi-volume-up-fill"></i> Speak</button>
 </div>
 
 <!-- Footer with credit -->
@@ -77,6 +80,7 @@ const prevBtn = document.getElementById('prevBtn');
 const shuffleBtn = document.getElementById('shuffleBtn');
 const knownBtn = document.getElementById('knownBtn');
 const unknownBtn = document.getElementById('unknownBtn');
+const speakBtn = document.getElementById('speakBtn');
 const progressBar = document.getElementById('progressBar');
 
 let flashcards = [];
@@ -166,6 +170,13 @@ unknownBtn.addEventListener('click', () => {
   saveProgress(selector.value);
   updateProgressBar();
   nextBtn.click();
+});
+
+speakBtn.addEventListener('click', () => {
+  if (!flashcards.length) return;
+  const utterance = new SpeechSynthesisUtterance(flashcards[currentIndex].answer.replace(/<br>/g,' '));
+  utterance.lang = 'nb-NO'; // Norwegian
+  speechSynthesis.speak(utterance);
 });
 
 // Switch sets
