--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
   <option value="flashcards-random.yaml">Random</option>
   <option value="flashcards-adjectives.yaml">Adjectives</option>
   <option value="flashcards-prepositions.yaml">Preposisjoner</option>
-  
+  <option value="flashcards-uttrykk.yaml">Uttrykk/Expressions</option>  
 </select>
 
 <!-- Progress -->
