--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@ footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
   <button class="btn btn-secondary" id="shuffleBtn">Shuffle</button>
 </div>
 
-<!-- Known/Unknown -->
+<!-- Known/Unknown/Speak -->
 <div class="d-flex gap-2">
   <button class="btn btn-success" id="knownBtn">Mark Known ✅</button>
   <button class="btn btn-danger" id="unknownBtn">Mark Unknown ❌</button>
   <button class="btn btn-info" id="speakBtn"><i class="bi bi-volume-up-fill"></i> Speak</button>
-  <p id="voiceInfo" class="text-muted small mt-2"></p>
 </div>
+
+<!-- info on speech voice -->
+<p id="voiceInfo" class="text-muted small mt-2"></p>
 
 <!-- Footer with credit -->
 <footer class="text-center">
