--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ body { background-color: #f8f9fa; display:flex; flex-direction:column; align-ite
 .card-front { font-family:'Poppins','Helvetica Neue',sans-serif; font-weight:600; font-size:1.3rem; color:#212529; letter-spacing:0.5px; text-align:center; }
 .progress-container { width:350px; margin-bottom:15px; }
 footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
+footer a:hover { color: #000; }
 </style>
 </head>
 <body>
@@ -60,8 +61,11 @@ footer { font-size:0.85rem; color:#6c757d; margin-top:20px; }
 
 <!-- Footer with credit -->
 <footer class="text-center">
-  Content courtesy of <a href="https://grammatikk.com/" target="_blank">grammatikk.com</a>. 
-  This app and its flashcards are free to use for any purpose.
+  Content courtesy of <a href="https://grammatikk.com/" target="_blank">grammatikk.com</a>.<br>
+  This app and its flashcards are free to use for any purpose.<br>
+  <a href="https://github.com/hclpandv/norsk-flashcard" target="_blank" class="text-decoration-none">
+    <i class="bi bi-github"></i> View source / Raise an issue
+  </a>
 </footer>
 
 <!-- JS libraries -->
