--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ footer a:hover { color: #000; }
 
 <!-- Known/Unknown/Speak -->
 <div class="d-flex gap-2">
-  <button class="btn btn-success" id="knownBtn">Mark Known ✅</button>
-  <button class="btn btn-danger" id="unknownBtn">Mark Unknown ❌</button>
+  <button class="btn btn-success" id="knownBtn">Mark Known</button>
+  <button class="btn btn-danger" id="unknownBtn">Mark Unknown</button>
   <button class="btn btn-info" id="speakBtn"><i class="bi bi-volume-up-fill"></i> Speak</button>
 </div>
 
